- Updated the flags of Haze Leaf to allow every member of a group to loot it.
- Updated the respawn time of Scourged Troll Mummy.
- Added War Golem Part to the loot table of Runic War Golem for the quest From the Ground Up.
- Added War Golem Part to the loot table of Iron Rune-Smith for the quest From the Ground Up.
- Updated the flags of War Golem Part to allow every member of a group to loot it.

[2022-05-05]
- Added Drakkari Canopic Jar to the loot table of Ancient Drakkari Warmonger for the quest It Takes Guts....
- Added Drakkari Canopic Jar to the loot table of Ancient Drakkari Soothsayer for the quest It Takes Guts....
- Updated the flags of Drakkari Canopic Jar to allow every member of a group to loot it.
- Added Missing Journal Page to the loot table of Runic Battle Golem for the quests The Damaged Journal and The Damaged Journal.
- Added Missing Journal Page to the loot table of Iron Rune-Shaper for the quests The Damaged Journal and The Damaged Journal.
- Added Missing Journal Page to the loot table of Rune Reaver for the quests The Damaged Journal and The Damaged Journal.
- Updated the flags of Missing Journal Page to allow every member of a group to loot it.

[2022-05-06]
- Added Mature Water-Poppy to the loot table of Crazed Water Spirit for the quests Something for the Pain and Troll Patrol: Something for the Pain.
- Updated the flags of Mature Water-Poppy to allow every member of a group to loot it.
- Updated the respawn time of Crashed Plague Sprayer.
- Updated the respawn time of Chunk of Saronite.
- Added Venture Co. Spare Parts to the loot table of Venture Co. Excavator for the quest Have a Part, Give a Part.
- Updated the flags of Venture Co. Spare Parts to allow every member of a group to loot it.

[2022-05-08]
- Added Sandfern to the loot table of Mangal Crocolisk for the quest Crocolisk Mastery: The Plan.
- Updated the flags of Sandfern to allow every member of a group to loot it.