@@ -266,3 +266,4 @@
 [2022-05-08]
 - Added Sandfern to the loot table of Mangal Crocolisk for the quest Crocolisk Mastery: The Plan.
 - Updated the flags of Sandfern to allow every member of a group to loot it.
+- Added the script for Sholazar Basin to make the quest Reconnaissance Flight trigger for every member of a group.
